# mcp-proxy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: servers.json  starter.json
src/: backend.rs  cli.rs  clients.rs  config.rs  custom_tools.rs  docker.rs  generate.rs  jsonrpc.rs  main.rs  pool.rs  server.rs  util.rs
src/commands/: clients.rs  health.rs  init.rs  mod.rs  profile.rs  serve.rs  server.rs  test.rs
src/pool/: entry.rs  env_key.rs  mod.rs  reap.rs  reload.rs
src/transport/: bridge.rs  http.rs  mod.rs  stdio.rs
