[package]
name = "mcp-hub"
version = "0.1.0"
edition = "2024"
description = "MCP proxy that aggregates multiple MCP servers into a single endpoint"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client (for custom HTTP tools and health checks)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
dirs = "6"

# Interactive prompts (for client selection)
dialoguer = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
